src/app/pages/landing/index.module.scss
.main {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: auto;
  // overflow: visible;
  min-height: 100dvh;
  // overflow-x: hidden;
}

.videoContainer {
  position: relative;
  width: 100%;
  height: 100dvh;
  // overflow: hidden;
  // fallback
  @supports not (height: 100dvh) {
    height: 100vh;
  }
}

.videoContainer video {
  width: 100%;
  height: 100%;
  object-fit: cover;
  position: relative;
}

.sliderContainer {
  top: 0;
  position: absolute;
  z-index: 3;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}

.textContainer {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0 2vw;
  color: #f9f9f9;
  font-size: clamp(32px, 8vw, 128px); /* Responsive font size */
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);


  .firstText {
    position: relative;
    left: 0;
    font-weight: 800;

  }

  .secondText {
    position: relative;
    right: 0;
    margin-top: -0.5em;
    font-weight: 800;

  }

  .thirdText {
    color: #f9f9f9;
    font-size: clamp(14px, 2vw, 20px); /* Responsive font size */
    z-index: 4;
    margin-top: -12px;
    padding-left: 0;
    font-weight: 0;
  }

  /* Call to Action Button */
  .button {
    z-index: 4;
    position: absolute;
    top: 67%;
    left: 38%;
    transform: translateX(-50%);
    width: clamp(120px, 20vw, 180px);
    height: clamp(40px, 6vh, 60px);
    background-color: #455CE9;
    color: white;
    border-radius: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
  }

  .button p {
    margin: 0;
    font-size: clamp(14px, 1.5vw, 16px);
    font-weight: 300;
    position: relative;
    z-index: 4;
  }
}


// /* Tablet (768px to 1024px) */
// @media (max-width: 1024px) {
//   .firstText,
//   .secondText {
//     font-size: 96px;
//   }

//   .secondText {
//     margin-top:-140px;

//   }

//   .thirdText {
//     margin-top: -100px;
//     font-size: 18px;
//   }

//   .button{
//     top: 75%;
//     left: 2%;
//     width: 140px;
//     height: 50px;
//   }
// }

// /* Phone (below 768px) */
// @media (max-width: 768px) {
//   .firstText,
//   .secondText {
//     font-size: 64px; 
//     position: static; 
//   }

//   .secondText {
//     margin-top:-80px;

//   }

//   .thirdText {
//     margin-top: -70px;
//     font-size: 14px;
//   }

//   .button{
//     top: 68%;
//     left: 2%;
//     width: 140px;
//     height: 50px;
//   }
// }


.descriptionSection {
  width: 100%;
  padding: 100px 2rem;
  padding-bottom: 160px;
  background-color: rgb(0, 0, 0); 
  // background-color: #262626;


}

.services2Section {
  width: 90%;
  background-color: black; 
  // background-color: #262626;
  color: #f9f9f9;
  padding-top: 10vh;
  margin: 0 auto;

  p {
    font-size: 5vh;
  }

  
}

.gallerySection {
    background-color: #ffffff;
    padding-bottom: 1vh;

}

